# nanogpt

./: .gitignore  ALIGNMENT.md  MEGATRON_DESIGN_NOTES.md  Makefile  RUNBOOK.md  info.md  model.py  muon.py  muon_megatron.py  prepare_cybertron_data.py  pyproject.toml  todo.md  train.py
archive/: README.md
config/: cybertron_baseline.py  cybertron_dense_107.py  cybertron_dense_196.py  cybertron_moe_196.py  cybertron_moe_196_eodmask.py  cybertron_moe_196_from10.py  cybertron_moe_196_resume.py  cybertron_moe_196_resume_test.py  cybertron_moe_198.py  v2_dense_107_full_s100.py  v2_dense_107_full_s123.py  v2_dense_107_full_s1337.py  v2_dense_107_full_s200.py  v2_dense_107_full_s300.py  v2_dense_107_full_s42.py  v2_dense_107_full_s456.py  v2_dense_107_full_s50.py  v2_dense_107_full_s7.py  v2_dense_107_full_s789.py  v2_dense_108_full.py  v2_moe196_full_scratch.py  v2_moe196_full_scratch_s123.py  v2_moe196_full_scratch_s2024.py  v2_moe196_full_scratch_s300.py  v2_moe196_full_scratch_s42.py  v2_moe196_full_scratch_s456.py  v2_moe196_full_scratch_s50.py  v2_moe196_full_scratch_s7.py  v2_moe196_full_scratch_s789.py  v2_moe196_full_scratch_s8675.py  v2_moe196_full_scratch_s9999.py  v2_moe196_muon_FUSED_s1337.py  v2_moe196_muon_LR1X_s100.py  v2_moe196_muon_LR1X_s123.py  v2_moe196_muon_LR1X_s1337.py  v2_moe196_muon_LR1X_s200.py  v2_moe196_muon_LR1X_s300.py  v2_moe196_muon_LR1X_s42.py  v2_moe196_muon_LR1X_s456.py  v2_moe196_muon_LR1X_s50.py  (+8 more)
dashboard/: README.md  build_local.py  build_v2_fleet.py  index.html  pai_tb_to_run_json.py  refresh_runs.py  v2_fleet.html
monitor/: core.py  (+4 more)
(+241 files in other folders)
