[project]
name = "nanogpt"
version = "0.1.0"
description = "nanoGPT fork aligned with scaling_moe_00196 / dense_00107 — bitwise-verifiable"
requires-python = ">=3.10"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--timeout=30",
]
markers = [
    "unit: fast CPU-only unit tests (<1s each, <30s total)",
    "integration: GPU-optional integration tests (<5min)",
    "regression: baseline-pinned regression tests (<30min)",
    "bitwise: strict bitwise-equality tests (det=True)",
    "slow: marked slow, skipped by default",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "out-*",
    "data",
    "reports",
    "reference",
    "dashboard",
    "monitor",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E741"]
